--- a/WarehouseMVC/Views/Shared/_Layout.cshtml
+++ b/WarehouseMVC/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Fauldan Technologies</p>
+            <p style="color:#FFF";>&copy; @DateTime.Now.Year - Fauldan Technologies</pstyle="color:#FF0000";>
         </footer>
     </div>
 
