--- a/WarehouseMVC/Views/Article/Create.cshtml
+++ b/WarehouseMVC/Views/Article/Create.cshtml
@@ -4,75 +4,76 @@
 @{
     ViewBag.Title = "Create";
 }
+    <div class="jumbotron">
+        <h2>Créer un nouvel article</h2>
 
-<h2>Créer un nouvel article</h2>
 
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-        <div class="form-horizontal">
-            @DateTime.Now.ToString("dd/MM/yyyy")<br />
-            @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>@Html.DisplayNameFor(model => model.Nom)</b>
+            <div class="form-horizontal">
+                @DateTime.Now.ToString("dd/MM/yyyy")<br />
+                @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>@Html.DisplayNameFor(model => model.Nom)</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-                <div class="col-lg-offset-1">
-                    @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>@Html.DisplayNameFor(model => model.PrixAchat)</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.PrixAchat, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.PrixAchat, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>@Html.DisplayNameFor(model => model.PrixVente)</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.PrixVente, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.PrixVente, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>@Html.DisplayNameFor(model => model.CategorieId)</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.DropDownListFor(model => model.CategorieId, new List<SelectListItem>(Model.ListCategorie.Select(c => new SelectListItem() { Text = c.Nom, Value = c.CategorieId.ToString() })))
+                        @Html.ValidationMessageFor(model => model.CategorieId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <br />
+                <br />
+                <div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Confirmer la création" class="btn btn-default" />
+                    </div>
                 </div>
             </div>
+        }
 
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>@Html.DisplayNameFor(model => model.PrixAchat)</b>
-                </div>
-                <div class="col-lg-offset-1">
-                    @Html.EditorFor(model => model.PrixAchat, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PrixAchat, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>@Html.DisplayNameFor(model => model.PrixVente)</b>
-                </div>
-                <div class="col-lg-offset-1">
-                    @Html.EditorFor(model => model.PrixVente, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PrixVente, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>@Html.DisplayNameFor(model => model.CategorieId)</b>
-                </div>
-                <div class="col-lg-offset-1">
-                    @Html.DropDownListFor(model => model.CategorieId, new List<SelectListItem>(Model.ListCategorie.Select(c => new SelectListItem() { Text = c.Nom, Value = c.CategorieId.ToString() })))
-                    @Html.ValidationMessageFor(model => model.CategorieId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <br />
-            <br />
-            <div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Confirmer la création" class="btn btn-default" />
-                </div>
-            </div>
+        <div>
+            <b>@Html.ActionLink("Annuler", "Index")</b>
         </div>
-}
+    </div>
 
-<div>
-    <b>@Html.ActionLink("Annuler", "Index")</b>
-</div>
-
-@*@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}*@
+        @*@section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }*@
