--- a/WarehouseMVC/Views/Article/Edit.cshtml
+++ b/WarehouseMVC/Views/Article/Edit.cshtml
@@ -4,68 +4,68 @@
 @{
     ViewBag.Title = "Edit";
 }
+    <div class="jumbotron">
+        <h2>Modification de l'article</h2>
 
-<h2>Modification de l'article</h2>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+            @DateTime.Now.ToString("dd/MM/yyyy")<br />
+            @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
 
-        @DateTime.Now.ToString("dd/MM/yyyy")<br />
-        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-    
-        <h3>Article n° @Html.DisplayFor(model => model.ArticleId) - @Html.DisplayFor(model => model.Nom)</h3>
-        <div class="form-horizontal">
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>@Html.DisplayNameFor(model => model.Nom)</b>
+            <h3>Article n° @Html.DisplayFor(model => model.ArticleId) - @Html.DisplayFor(model => model.Nom)</h3>
+            <div class="form-horizontal">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>@Html.DisplayNameFor(model => model.Nom)</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-                <div class="col-lg-offset-1">
-                    @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>@Html.DisplayNameFor(model => model.PrixAchat)</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.PrixAchat, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.PrixAchat, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>@Html.DisplayNameFor(model => model.PrixVente)</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.PrixVente, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.PrixVente, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>@Html.DisplayNameFor(model => model.CategorieNom)</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.DropDownListFor(model => model.CategorieId, new List<SelectListItem>(Model.ListCategorie.Select(c => new SelectListItem() { Text = c.Nom, Value = c.CategorieId.ToString() })))
+                        @Html.ValidationMessageFor(model => model.CategorieId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Confirmer la modification" class="btn btn-default" />
+                    </div>
                 </div>
             </div>
+        }
 
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>@Html.DisplayNameFor(model => model.PrixAchat)</b>
-                </div>
-                <div class="col-lg-offset-1">
-                    @Html.EditorFor(model => model.PrixAchat, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PrixAchat, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>@Html.DisplayNameFor(model => model.PrixVente)</b>
-                </div>
-                <div class="col-lg-offset-1">
-                    @Html.EditorFor(model => model.PrixVente, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.PrixVente, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>@Html.DisplayNameFor(model => model.CategorieNom)</b>
-                </div>
-                <div class="col-lg-offset-1">
-                    @Html.DropDownListFor(model => model.CategorieId, new List<SelectListItem>(Model.ListCategorie.Select(c => new SelectListItem() { Text = c.Nom, Value = c.CategorieId.ToString() })))
-                    @Html.ValidationMessageFor(model => model.CategorieId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Confirmer la modification" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-}
-
-<div>
-    <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
-</div>
+        <div>
+            <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
+        </div></div>
