--- a/WarehouseMVC/Views/Auth/Register.cshtml
+++ b/WarehouseMVC/Views/Auth/Register.cshtml
@@ -3,134 +3,134 @@
 @{
     ViewBag.Title = "Register";
 }
+    <div class="jumbotron">
+        <h2>Création d'un nouvel utilisateur</h2>
 
-<h2>Création d'un nouvel utilisateur</h2>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+            <div class="form-horizontal">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Login</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Login</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Mot de passe</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Mot de passe</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Nom</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Nom</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Prénom</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Prenom, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Prenom, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Prénom</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Prenom, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Prenom, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Email</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Email</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Téléphone</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.NumTel, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.NumTel, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Téléphone</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.NumTel, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NumTel, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Rue</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Rue, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Rue, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Rue</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Rue, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Rue, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Numéro</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Numero, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Numéro</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Numero, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Code Postal</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.CodePostal, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.CodePostal, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Code Postal</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.CodePostal, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CodePostal, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Ville</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Ville, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Ville, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Ville</b>
-            </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Ville, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Ville, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Pays</b>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        @Html.EditorFor(model => model.Pays, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Pays, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Pays</b>
+                <div class="form-group">
+                    <div class="col-md-offset-1 col-md-10">
+                        <input type="submit" value="Confirmer la création" class="btn btn-default" />
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-offset-1">
-                @Html.EditorFor(model => model.Pays, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Pays, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        }
 
-        <div class="form-group">
-            <div class="col-md-offset-1 col-md-10">
-                <input type="submit" value="Confirmer la création" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink(">>> Annuler <<<", "Index")
-</div>
+        <div>
+            @Html.ActionLink(">>> Annuler <<<", "Index")
+        </div></div>
