--- a/WarehouseMVC/Views/Categorie/Delete.cshtml
+++ b/WarehouseMVC/Views/Categorie/Delete.cshtml
@@ -4,26 +4,27 @@
 @{
     ViewBag.Title = "Delete";
 }
+    <div class="jumbotron">
+        <h2>Suppression de la catégorie</h2>
 
-<h2>Suppression de la catégorie</h2>
-
-<hr />
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-        @DateTime.Now.ToString("dd/MM/yyyy")<br />
-        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-        <div class="col-lg-offset-1">
-            <h3>Catégorie n° @Html.DisplayFor(model => model.CategorieId)</h3>
-            <h3>@Html.DisplayFor(model => model.Nom)</h3>
-        </div>
         <hr />
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Confirmer la suppression" class="btn btn-default" />
+            @DateTime.Now.ToString("dd/MM/yyyy")<br />
+            @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+            <div class="col-lg-offset-1">
+                <h3>Catégorie n° @Html.DisplayFor(model => model.CategorieId)</h3>
+                <h3>@Html.DisplayFor(model => model.Nom)</h3>
+            </div>
+            <hr />
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Confirmer la suppression" class="btn btn-default" />
+            </div>
+            <br />
+
+        }
+        <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
         </div>
-        <br />
-
-}
-<b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
