--- a/WarehouseMVC/Views/Categorie/Details.cshtml
+++ b/WarehouseMVC/Views/Categorie/Details.cshtml
@@ -3,24 +3,27 @@
 @{
     ViewBag.Title = "Details";
 }
+    <div class="jumbotron">
+        <h2>Détail de la catégorie</h2>
 
-<h2>Détail de la catégorie</h2>
 
+        <h3>@Html.DisplayFor(model => model.Nom)</h3>
+        <hr />
 
-    <h3>@Html.DisplayFor(model => model.Nom)</h3>
-    <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.Nom)
+            </dt>
 
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Nom)
+            </dd>
+        </dl>
+        @Html.ActionLink("Modifier", "Edit", new { id = Model.CategorieId }, new { @class = "btn btn-default" })
 
-        <dd>
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
-    </dl>
-    @Html.ActionLink("Modifier", "Edit", new { id = Model.CategorieId }, new { @class = "btn btn-default" })
-
-<p>
-    <br /><b>@Html.ActionLink("<<< Retour à la liste", "Index")</b>
-</p>
+   
+            <br />
+            <br />
+        <b>@Html.ActionLink("<<< Retour à la liste", "Index")</b>
+     
+        </div>
