--- a/WarehouseMVC/Views/Client/Details.cshtml
+++ b/WarehouseMVC/Views/Client/Details.cshtml
@@ -4,83 +4,84 @@
 @{
     ViewBag.Title = "Details";
 }
+    <div class="jumbotron">
+        <h2>Détail du client</h2>
 
-<h2>Détail du client</h2>
+        <p>
+            <b>@Html.ActionLink("Créer un client", "Create")</b>
+        </p>
 
-<p>
-    <b>@Html.ActionLink("Créer un client", "Create")</b>
-</p>
+        @DateTime.Now.ToString("dd/MM/yyyy")<br />
+        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+        <h3>Client n° @Html.DisplayFor(model => model.ClientId) - @Html.DisplayFor(model => model.Nom) @Html.DisplayFor(model => model.Prenom) - @Html.DisplayFor(model => model.NomSociete)</h3>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                Nom
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Nom)
+            </dd>
+            <dt>
+                Prénom
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Prenom)
+            </dd>
+            <dt>
+                Nom de la société
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.NomSociete)
+            </dd>
+            <dt>
+                Rue et numéro
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Numero) @Html.DisplayFor(model => model.Rue)
+            </dd>
+            <dt>
+                Code Postal
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CodePostal)
+            </dd>
+            <dt>
+                Ville
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Ville)
+            </dd>
+            <dt>
+                Pays
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Pays)
+            </dd>
+            <dt>
+                Téléphone
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.NumTel)
+            </dd>
+            <dt>
+                Email
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Email)
+            </dd>
+            <dt>
+                Numéro Tva
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.NumTva)
+            </dd>
+        </dl>
+        @Html.ActionLink("Modifier", "Edit", new { id = Model.ClientId }, new { @class = "btn btn-default" })
 
-    @DateTime.Now.ToString("dd/MM/yyyy")<br />
-    @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-<h3>Client n° @Html.DisplayFor(model => model.ClientId) - @Html.DisplayFor(model => model.Nom) @Html.DisplayFor(model => model.Prenom) - @Html.DisplayFor(model => model.NomSociete)</h3>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Nom
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
-        <dt>
-            Prénom
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Prenom)
-        </dd>
-        <dt>
-            Nom de la société
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NomSociete)
-        </dd>
-        <dt>
-            Rue et numéro
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Numero) @Html.DisplayFor(model => model.Rue)
-        </dd>
-        <dt>
-            Code Postal
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CodePostal)
-        </dd>
-        <dt>
-            Ville
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Ville)
-        </dd>
-        <dt>
-            Pays
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Pays)
-        </dd>
-        <dt>
-            Téléphone
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NumTel)
-        </dd>
-        <dt>
-            Email
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt>
-            Numéro Tva
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.NumTva)
-        </dd>
-    </dl>
-    @Html.ActionLink("Modifier", "Edit", new { id = Model.ClientId }, new { @class = "btn btn-default" })
 
-<p>
+            <br />
+            <br />
+            <b>@Html.ActionLink("<<< Retour à la liste", "Index")</b>
     
-    <br /><b>@Html.ActionLink("<<< Retour à la liste", "Index")</b>
-</p>
-
+</div>
