--- a/WarehouseMVC/Views/Client/Index.cshtml
+++ b/WarehouseMVC/Views/Client/Index.cshtml
@@ -5,58 +5,60 @@
 @{
     ViewBag.Title = "Index";
 }
+    <div class="jumbotron">
+        <h2>Liste des clients</h2>
 
-<h2>Liste des clients</h2>
+        <p>
+            <b>@Html.ActionLink("Ajouter un client", "Create")</b>
+        </p>
 
-<p>
-    <b>@Html.ActionLink("Ajouter un client", "Create")</b>
-</p>
+        @DateTime.Now.ToString("dd/MM/yyyy")<br />
+        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+        <br />
 
-    @DateTime.Now.ToString("dd/MM/yyyy")<br />
-    @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-    <br />
-    <table class="table">
-        <tr>
-            <th>
-                @Html.ActionLink("N°", "Index", new { sortOrder = ViewBag.IdSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Nom", "Index", new { sortOrder = ViewBag.NomSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Société", "Index", new { sortOrder = ViewBag.NomSocieteSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Ville", "Index", new { sortOrder = ViewBag.VilleSortParm })
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
+        <table class="table">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClientId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nom) @Html.DisplayFor(modelItem => item.Prenom)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NomSociete)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Ville)
-                </td>
-                <td>
-                    @Html.ActionLink("Fiche client", "Details", new { id = item.ClientId }, new { @class = "btn btn-default" })
-                    @Html.ActionLink("Modifier", "Edit", new { id = item.ClientId }, new { @class = "btn btn-default" })
-                    @Html.ActionLink("Supprimer", "Delete", new { id = item.ClientId }, new { @class = "btn btn-default" })
-                </td>
+                <th>
+                    @Html.ActionLink("N°", "Index", new { sortOrder = ViewBag.IdSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Nom", "Index", new { sortOrder = ViewBag.NomSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Société", "Index", new { sortOrder = ViewBag.NomSocieteSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Ville", "Index", new { sortOrder = ViewBag.VilleSortParm })
+                </th>
+                <th></th>
             </tr>
-        }
-    </table>
 
-    @Html.PagedListPager(Model, page => Url.Action("Index",
-    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nom) @Html.DisplayFor(modelItem => item.Prenom)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NomSociete)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Ville)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Fiche client", "Details", new { id = item.ClientId }, new { @class = "btn btn-default" })
+                        @Html.ActionLink("Modifier", "Edit", new { id = item.ClientId }, new { @class = "btn btn-default" })
+                        @Html.ActionLink("Supprimer", "Delete", new { id = item.ClientId }, new { @class = "btn btn-default" })
+                    </td>
+                </tr>
+            }
+        </table>
 
-<b>@Html.ActionLink("<<< Retour à l'accueil", "Index", "Home")</b>
+        @Html.PagedListPager(Model, page => Url.Action("Index",
+        new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+
+        <b>@Html.ActionLink("<<< Retour à l'accueil", "Index", "Home")</b>
+    </div>
