--- a/WarehouseMVC/Views/Expedition/Edit.cshtml
+++ b/WarehouseMVC/Views/Expedition/Edit.cshtml
@@ -4,55 +4,56 @@
 @{
     ViewBag.Title = "Edit";
 }
+    <div class="jumbotron">
+        <h2>Modification de l'expédition</h2>
 
-<h2>Modification de l'expédition</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
 
-    @DateTime.Now.ToString("dd/MM/yyyy")
-    <br />
-    @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-    <h3>Expedition n° @Html.DisplayFor(model => model.ExpeditionId)</h3>
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ExpeditionId)
+            @DateTime.Now.ToString("dd/MM/yyyy")
+            <br />
+            @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+            <h3>Expedition n° @Html.DisplayFor(model => model.ExpeditionId)</h3>
+            <div class="form-horizontal">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.ExpeditionId)
 
-        <div class="form-group">
-            <div class="col-lg-offset-1"><b>Article</b></div>
-            <div class="col-lg-offset-1">
-                @Html.DropDownListFor(model => model.ArticleId, new List<SelectListItem>(Model.ListArticle.Select(a => new SelectListItem() { Text = a.Nom, Value = a.ArticleId.ToString() })))
-                @Html.ValidationMessageFor(model => model.ArticleId, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-lg-offset-1"><b>Article</b></div>
+                    <div class="col-lg-offset-1">
+                        @Html.DropDownListFor(model => model.ArticleId, new List<SelectListItem>(Model.ListArticle.Select(a => new SelectListItem() { Text = a.Nom, Value = a.ArticleId.ToString() })))
+                        @Html.ValidationMessageFor(model => model.ArticleId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1"><b>Fournisseur</b></div>
+                    <div class="col-lg-offset-1">
+                        @Html.DropDownListFor(model => model.ClientId, new List<SelectListItem>(Model.ListClient.Select(f => new SelectListItem() { Text = f.Nom, Value = f.ClientId.ToString() })))
+                        @Html.ValidationMessageFor(model => model.ClientId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Quantité à expédier</b>
+                        @Html.EditorFor(model => model.Quantite, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Quantite, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Confirmer la modification" class="btn btn-default" />
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-lg-offset-1"><b>Fournisseur</b></div>
-            <div class="col-lg-offset-1">
-                @Html.DropDownListFor(model => model.ClientId, new List<SelectListItem>(Model.ListClient.Select(f => new SelectListItem() { Text = f.Nom, Value = f.ClientId.ToString() })))
-                @Html.ValidationMessageFor(model => model.ClientId, "", new { @class = "text-danger" })
+        }
+
+        <div>
+            <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
             </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-lg-offset-1">
-                <b>Quantité à expédier</b>
-                @Html.EditorFor(model => model.Quantite, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Quantite, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Confirmer la modification" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-
-}
-
-<div>
-    <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
