--- a/WarehouseMVC/Views/Expedition/Index.cshtml
+++ b/WarehouseMVC/Views/Expedition/Index.cshtml
@@ -5,74 +5,75 @@
 @{
     ViewBag.Title = "Index";
 }
+    <div class="jumbotron">
+        <h2>Expéditions en attente de sortie de stock</h2>
 
-    <h2>Expéditions en attente de sortie de stock</h2>
+        <p>
+            <b>@Html.ActionLink("Créer une nouvelle expédition", "Index", "Article")</b>
+        </p>
 
-<p>
-    <b>@Html.ActionLink("Créer une nouvelle expédition", "Index", "Article")</b>
-</p>
-
-    @DateTime.Now.ToString("dd/MM/yyyy")<br />
-    @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-    <br />
-    <table class="table">
-        <tr>
-            <th>
-                @Html.ActionLink("N°", "Index", new { sortOrder = ViewBag.IdSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Date", "Index", new { sortOrder = ViewBag.DateSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Article", "Index", new { sortOrder = ViewBag.ArticleNomSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Quantité", "Index", new { sortOrder = ViewBag.QuantiteSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Catégorie", "Index", new { sortOrder = ViewBag.CategorieNomSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Client", "Index", new { sortOrder = ViewBag.ClientNomSortParm })
-            </th>
-            <th>
-                @Html.ActionLink("Société", "Index", new { sortOrder = ViewBag.ClientNomSocieteSortParm })
-            </th>
-            <th></th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
+        @DateTime.Now.ToString("dd/MM/yyyy")<br />
+        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+        <br />
+        <table class="table">
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ExpeditionId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Date)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ArticleNom)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantite)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CategorieNom)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClientNom) @Html.DisplayFor(modelItem => item.ClientPrenom)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ClientNomSociete)
-                </td>
-                <td>
-                    @Html.ActionLink("Modifier", "Edit", new { id = item.ExpeditionId }, new { @class = "btn btn-default" })
-                    @Html.ActionLink("Voir les détails", "Details", new { id = item.ExpeditionId }, new { @class = "btn btn-default" })
-                    @Html.ActionLink("Confirmer l'expédition", "ConfirmExpedition", new { id = item.ExpeditionId }, new { @class = "btn btn-default" })
-                </td>
+                <th>
+                    @Html.ActionLink("N°", "Index", new { sortOrder = ViewBag.IdSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Date", "Index", new { sortOrder = ViewBag.DateSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Article", "Index", new { sortOrder = ViewBag.ArticleNomSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Quantité", "Index", new { sortOrder = ViewBag.QuantiteSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Catégorie", "Index", new { sortOrder = ViewBag.CategorieNomSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Client", "Index", new { sortOrder = ViewBag.ClientNomSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Société", "Index", new { sortOrder = ViewBag.ClientNomSocieteSortParm })
+                </th>
+                <th></th>
             </tr>
-        }
-    </table>
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
- 
-<b>@Html.ActionLink("<<< Retour à l'accueil", "Index", "Home")</b>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ExpeditionId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Date)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ArticleNom)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Quantite)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CategorieNom)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientNom) @Html.DisplayFor(modelItem => item.ClientPrenom)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ClientNomSociete)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Modifier", "Edit", new { id = item.ExpeditionId }, new { @class = "btn btn-default" })
+                        @Html.ActionLink("Voir les détails", "Details", new { id = item.ExpeditionId }, new { @class = "btn btn-default" })
+                        @Html.ActionLink("Confirmer l'expédition", "ConfirmExpedition", new { id = item.ExpeditionId }, new { @class = "btn btn-default" })
+                    </td>
+                </tr>
+            }
+        </table>
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+
+        <b>@Html.ActionLink("<<< Retour à l'accueil", "Index", "Home")</b>
+        </div>
