--- a/WarehouseMVC/Views/Fournisseur/AjoutCategorieFournisseur.cshtml
+++ b/WarehouseMVC/Views/Fournisseur/AjoutCategorieFournisseur.cshtml
@@ -4,35 +4,36 @@
 @{
     ViewBag.Title = "AjoutCategorieFournisseur";
 }
+    <div class="jumbotron">
+        <h2>Ajouter une categorie au fournisseur</h2>
 
-<h2>Ajouter une categorie au fournisseur</h2>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(model => model.FournisseurId)
+            <div class="form-horizontal">
+                @DateTime.Now.ToString("dd/MM/yyyy")<br />
+                @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+                <h4>@Model.FournisseurNom</h4>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-lg-offset-2">
+                        <b>@Html.DisplayNameFor(model => model.CategorieId)</b>
+                    </div>
+                    <div class="col-lg-offset-2">
+                        @Html.DropDownListFor(model => model.CategorieId, new List<SelectListItem>(Model.ListAjoutCategorieFournisseur.Select(c => new SelectListItem() { Text = c.Nom, Value = c.CategorieId.ToString() })))
+                        @Html.ValidationMessageFor(model => model.CategorieId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Confirmer l'ajout" class="btn btn-default" />
+                    </div>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    @Html.HiddenFor(model => model.FournisseurId)
-    <div class="form-horizontal">
-        @DateTime.Now.ToString("dd/MM/yyyy")<br />
-        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-        <h4>@Model.FournisseurNom</h4>
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            <div class="col-lg-offset-2">
-                <b>@Html.DisplayNameFor(model => model.CategorieId)</b>
+                </div>
             </div>
-            <div class="col-lg-offset-2">
-                @Html.DropDownListFor(model => model.CategorieId, new List<SelectListItem>(Model.ListAjoutCategorieFournisseur.Select(c => new SelectListItem() { Text = c.Nom, Value = c.CategorieId.ToString() })))
-                @Html.ValidationMessageFor(model => model.CategorieId, "", new { @class = "text-danger" })
-            </div>
+        }
+        <a href="@ViewBag.BoutonRetour"><h5><b>&lt;&lt;&lt; Retour au fournisseur</b></h5> </a>
+
         </div>
-        <br />
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Confirmer l'ajout" class="btn btn-default" />
-            </div>
-
-        </div>
-    </div>
-}
-<a href="@ViewBag.BoutonRetour"><h5><b>&lt;&lt;&lt; Retour au fournisseur</b></h5> </a>
-
