--- a/WarehouseMVC/Views/Fournisseur/CategorieFournisseur.cshtml
+++ b/WarehouseMVC/Views/Fournisseur/CategorieFournisseur.cshtml
@@ -3,79 +3,81 @@
 @{
     ViewBag.Title = "CategorieFournisseur";
 }
+    <div class="jumbotron">
+        <h2>CategorieFournisseur</h2>
 
-<h2>CategorieFournisseur</h2>
+        <p>
+            <b>@Html.ActionLink("Create New", "Create")</b>
+        </p>
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nom)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.NumTva)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.NumTel)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Rue)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Numero)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CodePostal)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Ville)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Pays)
+                </th>
+                <th></th>
+            </tr>
 
-<p>
-    <b>@Html.ActionLink("Create New", "Create")</b>
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nom)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumTva)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NumTel)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Rue)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Numero)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CodePostal)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Ville)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Pays)
-        </th>
-        <th></th>
-    </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nom)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NumTva)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NumTel)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Rue)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Numero)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CodePostal)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Ville)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Pays)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.FournisseurId }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.FournisseurId }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.FournisseurId })
+                    </td>
+                </tr>
+            }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nom)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumTva)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumTel)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Numero)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CodePostal)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ville)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Pays)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.FournisseurId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.FournisseurId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.FournisseurId })
-        </td>
-    </tr>
-}
-
-</table>
+        </table>
+        </div>
