--- a/WarehouseMVC/Views/Fournisseur/Delete.cshtml
+++ b/WarehouseMVC/Views/Fournisseur/Delete.cshtml
@@ -4,25 +4,26 @@
 @{
     ViewBag.Title = "Delete";
 }
+    <div class="jumbotron">
+        <h2>Supprimer un fournisseur</h2>
 
-<h2>Supprimer un fournisseur</h2>
 
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+            @DateTime.Now.ToString("dd/MM/yyyy")<br />
+            @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+            <div class="col-lg-offset-1">
+                <h3>Fournisseur n° @Html.DisplayFor(model => model.FournisseurId) - @Html.DisplayFor(model => model.Nom)
+            </div>
+            <hr />
 
-        @DateTime.Now.ToString("dd/MM/yyyy")<br />
-        @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-        <div class="col-lg-offset-1">
-            <h3>Fournisseur n° @Html.DisplayFor(model => model.FournisseurId) - @Html.DisplayFor(model => model.Nom)
+            <div class="form-actions no-color">
+                <input type="submit" value="Confirmer la suppression" class="btn btn-default" />
+            </div>
+            <br />
+
+        }
+        <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
         </div>
-        <hr />
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Confirmer la suppression" class="btn btn-default" />
-        </div>
-        <br />
-
-}
-<b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>  
