--- a/WarehouseMVC/Views/Reception/ConfirmReception.cshtml
+++ b/WarehouseMVC/Views/Reception/ConfirmReception.cshtml
@@ -4,61 +4,62 @@
 @{
     ViewBag.Title = "ConfirmReception";
 }
+    <div class="jumbotron">
+        <h2>Confirmer la mise en stock</h2>
 
-<h2>Confirmer la mise en stock</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
 
-    @DateTime.Now.ToString("dd/MM/yyyy")
-    <br />
-    @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+            @DateTime.Now.ToString("dd/MM/yyyy")
+            <br />
+            @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
 
-    <h3>Réception n° @Model.ReceptionId</h3>
-    <hr />
-    <div class="form-horizontal">
+            <h3>Réception n° @Model.ReceptionId</h3>
+            <hr />
+            <div class="form-horizontal">
 
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
+                <div class="form-group">
 
-            @Html.LabelFor(model => model.ArticleNom, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.ArticleNom, htmlAttributes: new { @class = "control-label col-md-2" })
 
-            <div class="col-lg-offset-2">
-                @Html.DropDownListFor(model => model.ArticleId, new List<SelectListItem>(Model.ListArticle.Select(c => new SelectListItem() { Text = c.Nom, Value = c.ArticleId.ToString() })))
-                @Html.ValidationMessageFor(model => model.ArticleId, "", new { @class = "text-danger" })
+                    <div class="col-lg-offset-2">
+                        @Html.DropDownListFor(model => model.ArticleId, new List<SelectListItem>(Model.ListArticle.Select(c => new SelectListItem() { Text = c.Nom, Value = c.ArticleId.ToString() })))
+                        @Html.ValidationMessageFor(model => model.ArticleId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+
+                    @Html.LabelFor(model => model.FournisseurNom, htmlAttributes: new { @class = "control-label col-md-2" })
+
+                    <div class="col-lg-offset-2">
+                        @Html.DropDownListFor(model => model.FournisseurId, new List<SelectListItem>(Model.ListFournisseur.Select(f => new SelectListItem() { Text = f.Nom, Value = f.FournisseurId.ToString() })))
+                        @Html.ValidationMessageFor(model => model.FournisseurId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Quantite, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Quantite, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Quantite, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Confirmer la mise en stock" class="btn btn-default" />
+                    </div>
+                </div>
             </div>
+
+        }
+
+        <div>
+            <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
         </div>
-
-        <div class="form-group">
-
-            @Html.LabelFor(model => model.FournisseurNom, htmlAttributes: new { @class = "control-label col-md-2" })
-
-            <div class="col-lg-offset-2">
-                @Html.DropDownListFor(model => model.FournisseurId, new List<SelectListItem>(Model.ListFournisseur.Select(f => new SelectListItem() { Text = f.Nom, Value = f.FournisseurId.ToString() })))
-                @Html.ValidationMessageFor(model => model.FournisseurId, "", new { @class = "text-danger" })
-            </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Quantite, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Quantite, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Quantite, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Confirmer la mise en stock" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-
-}
-
-<div>
-    <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
-</div>
