--- a/WarehouseMVC/Views/Reception/Create.cshtml
+++ b/WarehouseMVC/Views/Reception/Create.cshtml
@@ -4,55 +4,56 @@
 @{
     ViewBag.Title = "Create";
 }
+    <div class="jumbotron">
+        <h2>Création d'un bon de réception</h2>
 
-<h2>Création d'un bon de réception</h2>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+            <div class="form-horizontal">
+                @DateTime.Now.ToString("dd/MM/yyyy")<br />
+                @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-horizontal">
-            @DateTime.Now.ToString("dd/MM/yyyy")<br />
-            @SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <h3><b>@Model.ArticleNom</b></h3>
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <h3><b>@Model.ArticleNom</b></h3>
+                    </div>
+                    <div class="col-lg-offset-1">
+                        <b>@Model.CategorieNom</b>
+                    </div>
                 </div>
-                <div class="col-lg-offset-1">
-                    <b>@Model.CategorieNom</b>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1"><b>Fournisseur</b></div>
+                    <div class="col-lg-offset-1">
+                        @Html.DropDownListFor(model => model.FournisseurId, new List<SelectListItem>(Model.ListFournisseur.Select(f => new SelectListItem() { Text = f.Nom, Value = f.FournisseurId.ToString() })))
+                        @Html.ValidationMessageFor(model => model.FournisseurId, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-lg-offset-1">
+                        <b>Quantité reçue</b>
+                        @Html.EditorFor(model => model.Quantite, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Quantite, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-1 col-md-10">
+                        <input type="submit" value="Confirmer la création" class="btn btn-default" />
+                    </div>
                 </div>
             </div>
 
-            <div class="form-group">
-                <div class="col-lg-offset-1"><b>Fournisseur</b></div>
-                <div class="col-lg-offset-1">
-                    @Html.DropDownListFor(model => model.FournisseurId, new List<SelectListItem>(Model.ListFournisseur.Select(f => new SelectListItem() { Text = f.Nom, Value = f.FournisseurId.ToString() })))
-                    @Html.ValidationMessageFor(model => model.FournisseurId, "", new { @class = "text-danger" })
-                </div>
-            </div>
+        }
 
-            <div class="form-group">
-                <div class="col-lg-offset-1">
-                    <b>Quantité reçue</b>
-                    @Html.EditorFor(model => model.Quantite, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Quantite, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-1 col-md-10">
-                    <input type="submit" value="Confirmer la création" class="btn btn-default" />
-                </div>
-            </div>
+        <div>
+            <b>@Html.ActionLink(">>> Annuler <<<", "Index", "Article")</b>
         </div>
-
-}
-
-<div>
-    <b>@Html.ActionLink(">>> Annuler <<<", "Index", "Article")</b>
-</div>
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+        </div>
