--- a/WarehouseMVC/Views/Reception/Delete.cshtml
+++ b/WarehouseMVC/Views/Reception/Delete.cshtml
@@ -4,29 +4,30 @@
 @{
     ViewBag.Title = "Delete";
 }
-
-<h2>Annulation de la réception</h2>
-
-<hr />
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
     <div class="jumbotron">
-        <h4>@DateTime.Now.ToString("dd/MM/yyyy")</h4>
-        <h5>@SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom</h5>
-        <hr />
-        <div class="col-lg-offset-1">
-            <h3>Réception n° @Html.DisplayFor(model => model.ReceptionId) du @Html.DisplayFor(model => model.Date)</h3>
-            <h3>@Html.DisplayFor(model => model.FournisseurNom)</h3>
-            <h3>@Html.DisplayFor(model => model.ArticleNom)</h3>
-            <h3>Quantité : @Html.DisplayFor(model => model.Quantite)</h3>
-        </div>
-        <hr />
+        <h2>Annulation de la réception</h2>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Annuler la réception" class="btn btn-default" />
+        <hr />
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <div class="jumbotron">
+                <h4>@DateTime.Now.ToString("dd/MM/yyyy")</h4>
+                <h5>@SessionManager.Utilisateur.Nom @SessionManager.Utilisateur.Prenom</h5>
+                <hr />
+                <div class="col-lg-offset-1">
+                    <h3>Réception n° @Html.DisplayFor(model => model.ReceptionId) du @Html.DisplayFor(model => model.Date)</h3>
+                    <h3>@Html.DisplayFor(model => model.FournisseurNom)</h3>
+                    <h3>@Html.DisplayFor(model => model.ArticleNom)</h3>
+                    <h3>Quantité : @Html.DisplayFor(model => model.Quantite)</h3>
+                </div>
+                <hr />
+
+                <div class="form-actions no-color">
+                    <input type="submit" value="Annuler la réception" class="btn btn-default" />
+                </div>
+                <br />
+            </div>
+        }
+        <b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
         </div>
-        <br />
-    </div>
-}
-<b>@Html.ActionLink(">>> Annuler <<<", "Index")</b>
