--- a/WarehouseMVC/Views/Utilisateur/Detail.cshtml
+++ b/WarehouseMVC/Views/Utilisateur/Detail.cshtml
@@ -3,104 +3,105 @@
 @{
     ViewBag.Title = "Detail";
 }
+    <div class="jumbotron">
+        <h2>Detail</h2>
 
-<h2>Detail</h2>
+        <div>
+            <h4>Utilisateur</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Nom)
+                </dt>
 
-<div>
-    <h4>Utilisateur</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Nom)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Prenom)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Prenom)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Prenom)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Prenom)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Login)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Login)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Login)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Login)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Password)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Password)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Password)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Password)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.NumTel)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NumTel)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.NumTel)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.NumTel)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Rue)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Rue)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Rue)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Rue)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Numero)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Numero)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Numero)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Numero)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.CodePostal)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CodePostal)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.CodePostal)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CodePostal)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Ville)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Ville)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Ville)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Ville)
-        </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Pays)
+                </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Pays)
-        </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Pays)
+                </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Pays)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.UtilisateurId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+            </dl>
+        </div>
+        <p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.UtilisateurId }) |
+            @Html.ActionLink("Back to List", "Index")
+        </p>
+        </div>
